# co2_backend_rust

./: .env.example  Cargo.toml  README.md
prisma/: schema.prisma
src/: db.rs  main.rs
